<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawAreaActivity">

    <com.example.paintapp.DrawView
        android:id="@+id/draw_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_back_to_menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/back"
        android:contentDescription="@string/back_to_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_open_instruments"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/back"
        android:contentDescription="@string/back_to_menu"
        android:rotation="-90"
        app:layout_constraintBottom_toTopOf="@+id/instrument_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/instrument_panel"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/instrument_constraint_layout_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_palette"/>

        <ImageButton
            android:id="@+id/btn_palette"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/palette"
            android:contentDescription="@string/palette_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintEnd_toStartOf="@id/btn_eraser"/>

        <ImageButton
            android:id="@+id/btn_eraser"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/eraser"
            android:contentDescription="@string/eraser_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintStart_toEndOf="@id/btn_palette"
            app:layout_constraintEnd_toStartOf="@id/btn_text"/>

        <ImageButton
            android:id="@+id/btn_text"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/text"
            android:contentDescription="@string/text_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_eraser"
            app:layout_constraintStart_toEndOf="@id/btn_undo"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

        <ImageButton
            android:id="@+id/btn_undo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/undo"
            android:contentDescription="@string/undo_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintStart_toEndOf="@id/btn_text"
            app:layout_constraintEnd_toStartOf="@id/btn_save"/>

        <ImageButton
            android:id="@+id/btn_save"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/save"
            android:contentDescription="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintStart_toEndOf="@id/btn_undo"
            app:layout_constraintEnd_toStartOf="@id/btn_clear"/>

        <ImageButton
            android:id="@+id/btn_clear"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/clear"
            android:contentDescription="@string/clear_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>